// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > should render as custom element 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <select
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render as textarea 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 relative transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700 text-theme-secondary-text"
        data-testid="Input"
        disabled=""
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render invalid 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
    <div
      class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <span>
          <span>
            <span
              data-errortext="Field invalid"
              data-testid="Input__error"
            >
              <div
                class="text-theme-danger-500"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-exclamation-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render invalid and disabled 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-secondary-100 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700 text-theme-secondary-text"
        data-testid="Input"
        disabled=""
        type="text"
      />
    </div>
    <div
      class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <span>
          <span>
            <span
              data-errortext="Field invalid and disabled"
              data-testid="Input__error"
            >
              <div
                class="text-theme-danger-500"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-exclamation-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-[34px] overflow-hidden transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render with addons 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <span>
      start
    </span>
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
    <div
      class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 some-class-name"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <span>
          end
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render with focus 1`] = `
<DocumentFragment>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > should render with suggestion 1`] = `
<DocumentFragment>
  <div
    class="invisible fixed w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
        data-testid="Input"
        type="text"
      />
      <span
        class="no-ligatures pointer-events-none absolute inset-y-0 flex w-full items-center text-sm font-normal opacity-50 sm:text-base"
        data-testid="Input__suggestion"
      >
        <span
          class="truncate"
        >
          suggestion
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
